# DeaDBeeF-MPRIS-plugin

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  autoclean.sh  config.h.in  configure  configure.ac  index.html  introspection_xml.c  introspection_xml.h  mpris.c  mpris_common.c  mpris_common.h  mpris_server.c  mpris_server.h  mpris_v1.c  mpris_v1.h  mpris_v2.c  mpris_v2.h
osd-lyrics-patch/: Makefile.am  deadbeef.patch  ol_player.c  ol_player_deadbeef.c  ol_player_deadbeef.h
test/: Makefile.am  Makefile.in  test_signal.c
