dnl Process this file with autoconf to produce a configure script.
AC_INIT([deadbeef-mpirs-plugin], [1.0])

AC_CONFIG_HEADER(config.h)

AM_INIT_AUTOMAKE([1.11 dist-bzip2])
AM_MAINTAINER_MODE()

AC_USE_SYSTEM_EXTENSIONS
AC_PROG_CC
AC_PROG_CXX
AC_STDC_HEADERS
AC_PROG_INSTALL
AC_PROG_LIBTOOL
AC_CONFIG_MACRO_DIR([m4])
AC_C_BIGENDIAN
PKG_PROG_PKG_CONFIG

PKG_CHECK_MODULES(GLIB_DEPS, glib-2.0 gio-2.0 gthread-2.0)
MPRIS_LIBS="$GLIB_DEPS_LIBS"
MPRIS_CFLAGS="$GLIB_DEPS_CFLAGS"
AC_SUBST(MPRIS_LIBS)
AC_SUBST(MPRIS_CFLAGS)

AC_CONFIG_FILES([Makefile])

AC_OUTPUT
